New entries should be added at the top

2005-06-01 Added Nicholas' frombyte image patch - JDH

2005-05-31 Added vertical TeX support for agg - JDH

2005-05-31 Applied Eric's cntr patch - JDH

2005-05-27 Finally found the pesky agg bug (which Maxim was kind
           enough to fix within hours) that was causing a segfault in
           the win32 cached marker drawing.  Now windows users can get
           the enormouse performance benefits of caced markers w/o
           those occasional pesy screenshots. - JDH

2005-05-27 Got win32 build system working again, using a more recent
           version of gtk and pygtk in the win32 build, gtk 2.6 from
           http://www.gimp.org/~tml/gimp/win32/downloads.html (you
           will also need libpng12.dll to use these).  I haven't
           tested whether this binary build of mpl for win32 will work
           with older gtk runtimes, so you may need to upgrade.

2005-05-27 Fixed bug where 2nd wxapp could be started if using wxagg
           backend. - ADS

2005-05-26 Added Daishi text with dash patch -- see examples/dashtick.py

2005-05-26 Moved backend_latex functionality into backend_ps. If 
           text.usetex=True, the PostScript backend will use LaTeX to 
           generate the .ps or .eps file. Ghostscript is required for 
           eps output. - DSD

2005-05-24 Fixed alignment and color issues in latex backend. - DSD

2005-05-21 Fixed raster problem for small rasters with dvipng -- looks
           like it was a premultipled alpha problem - JDH

2005-05-20 Added linewidth and faceted kwarg to scatter to control
           edgewidth and color.  Also added autolegend patch to
           inspect line segments.

2005-05-18 Added Orsay and JPL qt fixes - JDH

2005-05-17 Added a psfrag latex backend -- some alignment issues need
           to be worked out. Run with -dLaTeX and a *.tex file and
           *.eps file are generated.  latex and dvips the generated